--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "dexie": "^3.2.4",
@@ -16,14 +17,10 @@
     "file-saver": "^2.0.5",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
-    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
-    "uuid": "^9.0.1",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8",
-    "autoprefixer": "^10.0.1"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
@@ -31,8 +28,11 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
